--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
    - go: 1.15.x
      env:
        - TAGS="-tags travis"
-       - COVERAGE="-cover"
+       - COVERAGE="-coverpkg=github.com/sbinet/npyio/..."
    - go: 1.14.x
      env:
        - TAGS="-tags travis"
